[project]
name = "subab"
version = "0.1.0"
description = "A lightweight CLI tool to translate .srt subtitle files with any OpenAI-compatible LLM API."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "json-repair>=0.52.0",
    "srt>=3.5.3",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
